# cluster

./: .gitignore  CMakeLists.txt  README.md
src/: Cluster.cpp  Cluster.h  Cube.cpp  Cube.h  Curve.cpp  Curve.h  Dataset.cpp  Dataset.h  GeneralParameters.h  GenericAlgorithm.h  HashTableStruct.cpp  HashTableStruct.h  LSH.h  Object.h  Point.cpp  Point.h  Projection.cpp  Projection.h  RelevantTraversals.cpp  RelevantTraversals.h  cluster.conf  curve_grid_hypercube.cpp  curve_grid_lsh.cpp  curve_grid_lsh.h  curve_hasher.cpp  dba.cpp  dba.h  distance.cpp  distance.h  hasher.h  kmeans.h  main.cpp  mainCurvesProjectionCube.cpp  mainCurvesProjectionLSH.cpp  mainPointsCube.cpp  mainPointsLSH.cpp  parse_files.cpp  parse_files.h  point_hasher.cpp  search.cpp  (+16 more)
src/dataset/curves/: input_projection10.csv  input_projection6.csv  trajectories_dataset_very_small.csv
src/testdata/: curves_loukas_small  trajectories_input_small  trajectories_query  trajectories_query_small
